--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="./amruthalogo.webp" type="image/x-icon" />
+    <link rel="shortcut icon" href="./obsession-logo.jpg" type="image/x-icon" />
     <meta
       http-equiv="Cache-Control"
       content="no-cache, no-store, must-revalidate"
